# FlavorsAcrossTwoDecades

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile
.zed/: debug.json  task.json
crates/backend/: Cargo.toml
crates/backend/config/: default.toml  production.toml
crates/backend/migrations/: 001_initial.sql  002_phase4_schema.sql  initial.sql
crates/backend/src/: error.rs  lib.rs  main.rs
crates/backend/src/api/: commands.rs  customers.rs  dialogues.rs  docs.rs  garden.rs  health.rs  memory.rs  mod.rs  panda.rs  panpan.rs  recipes.rs  saves.rs  shop.rs  travel.rs  websocket.rs
crates/backend/src/config/: mod.rs  settings.rs
crates/backend/src/db/: migrations.rs  mod.rs  pool.rs  seed.rs
crates/backend/src/db/models/: command.rs  customer.rs  dialogue.rs  garden.rs  memory.rs  mod.rs  panda.rs  panpan.rs  recipe.rs  save.rs  shop.rs  travel.rs  weather.rs
crates/backend/src/db/repositories/: command.rs  customer.rs  dialogue.rs  garden.rs  memory.rs  mod.rs  panda.rs  panpan.rs  recipe.rs  save_repository.rs  shop.rs  travel.rs  weather.rs
crates/backend/src/game/: command.rs  engine.rs  event.rs  mod.rs  time.rs
crates/backend/src/game/achievement/: achievement.rs  manager.rs  mod.rs
crates/backend/src/game/customer/: ai_generator.rs  customer.rs  mod.rs  order.rs  preference.rs  prompt.rs  review.rs  vip.rs
crates/backend/src/game/garden/: crop.rs  mod.rs  plot.rs
crates/backend/src/game/llm/: context.rs  decision.rs  minimax.rs  mod.rs  ollama.rs  prompt.rs  provider.rs
crates/backend/src/game/llm/templates/: autonomous_action.hbs  command_decision.hbs  daily_report.hbs  event_response.hbs  system_prompt.hbs
crates/backend/src/game/memory/: fragment.rs  manager.rs  memory.rs  mod.rs
crates/backend/src/game/neighbor/: interaction.rs  mod.rs  neighbor.rs
crates/backend/src/game/order/: mod.rs  order.rs  review.rs
crates/backend/src/game/panda/: manager.rs  mod.rs  module.rs  state.rs
crates/backend/src/game/panpan/: mod.rs  module.rs  state.rs
crates/backend/src/game/recipe/: experiment.rs  ingredient.rs  mod.rs  recipe.rs
crates/backend/src/game/restaurant/: manager.rs  mod.rs
crates/backend/src/game/shop/: facility.rs  finance.rs  inventory.rs  mod.rs  reputation.rs
crates/backend/src/game/travel/: destination.rs  mod.rs  reward.rs  travel.rs
crates/backend/src/game/weather/: effect.rs  holiday.rs  mod.rs  prompt.rs  weather.rs
crates/backend/src/utils/: mod.rs  time.rs
crates/backend/tests/: integration_test.rs
crates/frontend/: Cargo.toml
docs/drafts/: CustomerDraft.md  GameDraft.md  KitchenDraft.md  PanPanPropertiesDraft.md  (+7 more)
(+10 files in other folders)
