[workspace]
resolver = "2"
members = [
    "crates/backend",
    "crates/frontend",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Flavors Game Team"]
license = "MIT"
repository = "https://github.com/flavors-game/flavors-across-two-decades"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.50.0", features = ["full"] }

# Web 框架
axum = { version = "0.8.8", features = ["ws"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }

# 数据库
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }

# 序列化
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# 配置
config = "0.15.19"

# 日志
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# 时间
chrono = { version = "0.4.44", features = ["serde"] }

# UUID
uuid = { version = "1.21.0", features = ["v4", "serde"] }

# 错误处理
thiserror = "2.0.18"
anyhow = "1.0.102"

# CLI
clap = { version = "4.5.60", features = ["derive"] }

# LLM
ollama-rs = "0.3"
handlebars = "6.0.0"

# 随机数
rand = "0.10.0"

# 异步 trait
async-trait = "0.1.87"

# futures
futures = "0.3.31"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# TUI 框架
ratatui = "0.29.0"
crossterm = "0.29.0"

# OpenAPI 文档
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
