[package]
name = "flavors-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "flavors-backend"
path = "src/main.rs"

[dependencies]
# 异步运行时
tokio = { workspace = true }
tokio-util = { workspace = true }

# Web 框架
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# 数据库
sqlx = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 配置
config = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# 时间
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# CLI
clap = { workspace = true }

# LLM
ollama-rs = { workspace = true }
handlebars = { workspace = true }

# 随机数
rand = { workspace = true }
# 正则表达式
regex = { workspace = true }

# 异步 trait
async-trait = { workspace = true }

# futures
futures = { workspace = true }

# HTTP 客户端
reqwest = { workspace = true }

# OpenAPI 文档
utoipa = { workspace = true }

[dev-dependencies]

